--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,9 @@ services:
       PORT: 5000
     ports:
       - "5000:8080"
+  db:
+    image: postgres:latest
+    environment:
+      POSTGRES_DB: "habrdb"
+      POSTGRES_USER: "habrpguser"
+      POSTGRES_PASSWORD: "pgpwd4habr"
