--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,11 @@ readme = "README.md"
 python = "^3.11"
 flask = "^2.3.3"
 black = "^23.9.1"
+psycopg2-binary = "^2.9.9"
+flask-sqlalchemy = "^3.1.1"
+flask-migrate = "^4.0.5"
+pydantic = "^2.5.1"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
