--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ flask-sqlalchemy = "^3.1.1"
 flask-migrate = "^4.0.5"
 pydantic = "^2.5.1"
 python-dotenv = "^1.0.0"
+flask-jwt-extended = "^4.6.0"
+passlib = "^1.7.4"
 
 
 [build-system]
